--- a/website/content/en/releases/14.3R/relnotes.adoc
+++ b/website/content/en/releases/14.3R/relnotes.adoc
@@ -187,13 +187,30 @@ gitref:3a2ec5957ea9[repository=src]
 [[userland-contrib]]
 === Contributed Software
 
+llvm, clang, compiler-rt, libc++, libunwind, lld, lldb and openmp have been updated to llvm-project llvmorg-19-init-18630-gf2ccf80136a0(gitref:0eb20fbda7a3[repository=src]), llvmorg-19.0.0-0-gb1c3f8d6a2e4(gitref:340cad008ec3[repository=src]), llvmorg-19.1.0-rc1-0-ga4902a36d5c2(gitref:d544fe589b6a[repository=src]), llvmorg-19.1.0-rc2-0-gd033ae172d1c(gitref:bbe070a078a2[repository=src]), llvmorg-19.1.0-rc3-0-g437434df21d8(gitref:33d8457b6138[repository=src]), llvmorg-19.1.0-rc4-0-g0c641568515a(gitref:67b657ee90c3[repository=src]), llvmorg-19.1.0-0-ga4bf6cd7cfb1(gitref:340cad008ec3[repository=src]), llvmorg-19.1.1-0-gd401987fe349(gitref:4d2780d6b0a7[repository=src]), llvmorg-19.1.2-0-g7ba7d8e2f7b6(gitref:f61db8646f1f[repository=src]), llvmorg-19.1.3-0-gab51eccf88f5(gitref:2105db3863ae[repository=src]), llvmorg-19.1.4-0-gaadaa00de76e(gitref:f7fa6bf9e73e[repository=src]), llvmorg-19.1.5-0-gab4b5a2db582(gitref:4db4ed368037[repository=src]) and llvmorg-19.1.7-0-gcd708029e0b2(gitref:dc3f24ea8a25[repository=src]).
+
+man:xz[1] has been consecutively updated to 5.6.2(gitref:679e92405637[repository=src]), 5.6.3(gitref:edf0691b19b2[repository=src]) and 5.8.1(gitref:9679eedea94c[repository=src]).
+
+man:less[1] has been updated to v668 (gitref:0bb4c188d363[repository=src]).
+
+man:file[1] has been updated to 5.46 (gitref:71c92e6b94f0[repository=src]).
+
+man:expat[3] has been consecutively updated to 2.6.3(gitref:7fcc9d60956f[repository=src]) and 2.6.4 (gitref:78ab4c182b9f[repository=src]).
+
 `tzdata` has been consecutively updated to 2025a(gitref:a158d26e89f2[repository=src]) and 2025b(gitref:475082194ac8[repository=src]).
 
 [[userland-deprecated-programs]]
 === Deprecated Applications
 
+Deprecation notice for man:syscons[4] has been added.
+man:syscons[4] is not compatible with UEFI, does not support UTF-8, and is Giant-locked.
+There is no specific timeline yet for removing it, but support for the Giant lock is expected to go away in one or two major release cycles.
+(gitref:8c922db4f3d9[repository=src]). (Sponsored by The FreeBSD Foundation).
+
 [[userland-libraries]]
 === Runtime Libraries and API
+
+`libcxxrt` has been updated to upstream 6f2fdfebcd62(gitref:d9901a23bd2f[repository=src]).
 
 [[kernel]]
 == Kernel
@@ -237,6 +254,18 @@ This section covers changes and additions to devices and device drivers since {r
 
 [[drivers-device]]
 === Device Drivers
+
+man:rtw88[4]: Merge Realtek's rtw88 driver based on Linux v6.14 (gitref:8ef442451791[repository=src]).
+(Sponsored by The FreeBSD Foundation).
+
+man:rtw89[4]: Merge Realtek's rtw89 driver based on Linux v6.14 (gitref:b6e8b845aeab[repository=src]).
+(Sponsored by The FreeBSD Foundation).
+
+man:iwmbtfw[4]: Add support for 9260/9560 bluetooth adaptors (gitref:8e62ae9693bd[repository=src]).
+Required firmware files are already included in to package:comms/iwmbt-firmware[] port.
+
+Added support for Brainboxes USB-to-Serial adapters.
+(gitref:47db906375b5[repository=src])
 
 man:sound[4]: Allocate vchans on-demand.
 Refactor `pcm_chnalloc()` and merge with parts of `vchan_setnew()` (now removed) and `dsp_open()`’s channel creation into a `new dsp_chn_alloc()` function.
@@ -309,9 +338,20 @@ This section describes changes that affect networking in FreeBSD.
 [[network-general]]
 === General Network
 
+man:ix[4]: Add support for 1000BASE-BX SFP modules x550(gitref:24491b4acce5[repository=src]).
+
+man:bnxt[4]: Enable NPAR support on BCM57504 10/25GbE NICs.
+(gitref:54f842ed8897[repository=src]).
+
+man:bnxt[4]: Add 5760X (Thor2) PCI IDs support.
+Add Thor2 PCI IDs.
+(gitref:45e161020c2d[repository=src]).
+
+man:bnxt[4]: Add support for 400G speed modules (gitref:32fdad17f060[repository=src]).
+
 man:ix[4]: Add support for 1000BASE-BX SFP modules.
 Add support for 1Gbit BiDi modules.
-gitref:c34817d9aef7[repository=src].
+(gitref:c34817d9aef7[repository=src]).
 
 man:igc[4]: Fix attach for I226-K and LMVP devices.
 The device IDs for these were in the driver's list of PCI ids to attach to, but `igc_set_mac_type()` had never been setup to set the correct mac type for these devices.
@@ -349,6 +389,9 @@ Please see link:https://www.freebsd.org/releases/{localRel}R/hardware[the list o
 
 [[hardware-virtualization]]
 === Virtualization Support
+
+`hw.pci.intx_reroute` has been turned off in EC2.
+(gitref:66d36f4f1025[repository=src]).
 
 [[documentation]]
 == Documentation
@@ -404,6 +447,12 @@ gitref:894efae09de4[repository=src]
 == Ports Collection and Package Infrastructure
 
 This section covers changes to the FreeBSD Ports Collection, package infrastructure, and package maintenance and installation tools.
+
+New kmod repository was added.
+The kmod repository is a new repository for FreeBSD kernel modules specially third party modules from the FreeBSD Ports Collection.
+The installer images uses Quarterly branch of the ports tree but the quarterly branch lags behind on the most recent Graphics drivers.
+To serve the most recent graphics drivers and related kmods the kmod repository was created.
+(gitref:a47542f71511[repository=src]).
 
 [[ports-packages]]
 === Packaging Changes
