--- a/website/content/en/releases/14.3R/relnotes.adoc
+++ b/website/content/en/releases/14.3R/relnotes.adoc
@@ -189,6 +189,8 @@ gitref:3a2ec5957ea9[repository=src]
 
 llvm, clang, compiler-rt, libc++, libunwind, lld, lldb and openmp have been updated to llvm-project llvmorg-19-init-18630-gf2ccf80136a0(gitref:0eb20fbda7a3[repository=src]), llvmorg-19.0.0-0-gb1c3f8d6a2e4(gitref:340cad008ec3[repository=src]), llvmorg-19.1.0-rc1-0-ga4902a36d5c2(gitref:d544fe589b6a[repository=src]), llvmorg-19.1.0-rc2-0-gd033ae172d1c(gitref:bbe070a078a2[repository=src]), llvmorg-19.1.0-rc3-0-g437434df21d8(gitref:33d8457b6138[repository=src]), llvmorg-19.1.0-rc4-0-g0c641568515a(gitref:67b657ee90c3[repository=src]), llvmorg-19.1.0-0-ga4bf6cd7cfb1(gitref:340cad008ec3[repository=src]), llvmorg-19.1.1-0-gd401987fe349(gitref:4d2780d6b0a7[repository=src]), llvmorg-19.1.2-0-g7ba7d8e2f7b6(gitref:f61db8646f1f[repository=src]), llvmorg-19.1.3-0-gab51eccf88f5(gitref:2105db3863ae[repository=src]), llvmorg-19.1.4-0-gaadaa00de76e(gitref:f7fa6bf9e73e[repository=src]), llvmorg-19.1.5-0-gab4b5a2db582(gitref:4db4ed368037[repository=src]) and llvmorg-19.1.7-0-gcd708029e0b2(gitref:dc3f24ea8a25[repository=src]).
 
+man:zfs[8]: OpenZFS has been updated to zfs-2.2-release(2.2.7) (gitref:2ec8b6948070[repository=src]).
+
 man:xz[1] has been consecutively updated to 5.6.2(gitref:679e92405637[repository=src]), 5.6.3(gitref:edf0691b19b2[repository=src]) and 5.8.1(gitref:9679eedea94c[repository=src]).
 
 man:less[1] has been updated to v668 (gitref:0bb4c188d363[repository=src]).
