--- a/website/content/en/releases/14.3R/relnotes.adoc
+++ b/website/content/en/releases/14.3R/relnotes.adoc
@@ -249,6 +249,8 @@ Additionally, it must be possible for this set of groups to also depend on the t
 gitref:83ffc412b2e9[repository=src].
 (Sponsored by The FreeBSD Foundation).
 
+Allow man:mpi3mr[4] driver to be in-kernel and add to GENERIC (gitref:e2b8fb2202c2[repository=src]).
+
 [[drivers]]
 == Devices and Drivers
 
@@ -256,6 +258,13 @@ This section covers changes and additions to devices and device drivers since {r
 
 [[drivers-device]]
 === Device Drivers
+
+man:mpi3mr[4] driver version has been consecutively updated to 8.10.0.1.0(gitref:810abb12585d[repository=src]) and 8.14.0.2.0(gitref:e6d4b221ba7c[repository=src]).
+
+man:mpi3mr[4] MPI Header has been updated to Version 36.
+This aligns with the latest MPI specification.
+This includes updated structures, field definitions, and constants required for compatibility with updated firmware.
+(gitref:60cf1576501d[repository=src]).
 
 man:rtw88[4]: Merge Realtek's rtw88 driver based on Linux v6.14 (gitref:8ef442451791[repository=src]).
 (Sponsored by The FreeBSD Foundation).
@@ -339,6 +348,9 @@ This section describes changes that affect networking in FreeBSD.
 
 [[network-general]]
 === General Network
+
+man:ena[4] driver version has been updated to v2.8.1 (gitref:a1685d25601e[repository=src]).
+(Sponsored by Amazon, Inc.)
 
 man:ix[4]: Add support for 1000BASE-BX SFP modules x550(gitref:24491b4acce5[repository=src]).
 
