--- a/website/content/en/releases/14.3R/relnotes.adoc
+++ b/website/content/en/releases/14.3R/relnotes.adoc
@@ -197,9 +197,14 @@ man:less[1] has been updated to v668 (gitref:0bb4c188d363[repository=src]).
 
 man:file[1] has been updated to 5.46 (gitref:71c92e6b94f0[repository=src]).
 
-man:expat[3] has been consecutively updated to 2.6.3(gitref:7fcc9d60956f[repository=src]) and 2.6.4 (gitref:78ab4c182b9f[repository=src]).
+man:expat[3] has been consecutively updated to 2.6.3(gitref:7fcc9d60956f[repository=src]), 2.6.4 (gitref:78ab4c182b9f[repository=src]) and 2.7.1(gitref:6f7ee9ac036e[repository=src]).
 
 `tzdata` has been consecutively updated to 2025a(gitref:a158d26e89f2[repository=src]) and 2025b(gitref:475082194ac8[repository=src]).
+
+OpenSSH has been consecutively updated to 9.8p1(gitref:ff2fd01609cc[repository=src]), 9.9p1(gitref:802386cd37f6[repository=src]) and 9.9p2(gitref:059b786b7db5[repository=src]).
+(Sponsored by The FreeBSD Foundation).
+
+OpenSSL has been updated to 3.0.16(gitref:cb29db243bd0[repository=src]).
 
 [[userland-deprecated-programs]]
 === Deprecated Applications
@@ -207,7 +212,14 @@ man:expat[3] has been consecutively updated to 2.6.3(gitref:7fcc9d60956f[reposit
 Deprecation notice for man:syscons[4] has been added.
 man:syscons[4] is not compatible with UEFI, does not support UTF-8, and is Giant-locked.
 There is no specific timeline yet for removing it, but support for the Giant lock is expected to go away in one or two major release cycles.
-(gitref:8c922db4f3d9[repository=src]). (Sponsored by The FreeBSD Foundation).
+(gitref:8c922db4f3d9[repository=src]).
+(Sponsored by The FreeBSD Foundation).
+
+OpenSSH plans to remove support for the DSA signature algorithm in early 2025.
+
+man:publickey[5] stuffs has been deprecated.
+This uses DES and it is likely that nobody uses that in 2025.
+(gitref:9197c04a251b[repository=src]).
 
 [[userland-libraries]]
 === Runtime Libraries and API
