--- a/website/content/en/releases/14.3R/relnotes.adoc
+++ b/website/content/en/releases/14.3R/relnotes.adoc
@@ -206,8 +206,15 @@ OpenSSH has been consecutively updated to 9.8p1(gitref:ff2fd01609cc[repository=s
 
 OpenSSL has been updated to 3.0.16(gitref:cb29db243bd0[repository=src]).
 
+`googletest` has been updated from 1.14.0 to 1.15.2(gitref:1d67cec52542[repository=src]).
+One notable change is that GoogleTest 1.15.x now officially requires C++-14 (1.14.x required C++-11).
+
+`spleen` has been updated to Spleen 2.1.0(gitref:26336203d32c[repository=src]).
+
 [[userland-deprecated-programs]]
 === Deprecated Applications
+
+Update deprecation warning to note that man:gvinum[8] is removed in 15.0(gitref:dec497a9fcbf[repository=src]).
 
 Deprecation notice for man:syscons[4] has been added.
 man:syscons[4] is not compatible with UEFI, does not support UTF-8, and is Giant-locked.
@@ -426,6 +433,9 @@ This section covers changes to manual (man:man[1]) pages and other documentation
 
 [[man-pages]]
 === Man Pages
+
+Refer to man:graid[8] and man:zfs[8] instead of man:gvinum[8] in man:ccdconfig[8]).
+(gitref:55cb3a33d920[repository=src]).
 
 man:ps[1]: Document change in behavior for `-a`/`-A`.
 Document the practical consequence of change gitref:93a94ce731a8[repository=src] that specifying `-a`/`-A` leads to printing all processes regardless of the presence of other process selection options (except for `-x`/`-X`, which command a filter).
