--- a/website/content/en/releases/14.3R/relnotes.adoc
+++ b/website/content/en/releases/14.3R/relnotes.adoc
@@ -175,11 +175,6 @@ Add flags to filter jail prison and vnet variables in man:sysctl[8] output.
 So users do not have to contact the source code to tell whether a variable is a jail prison / vnet one or not.
 gitref:615c9ce250ee[repository=src].
 
-LinuxKPI: Make `linux_alloc_pages()` honor `__GFP_NORETRY`.
-This is to fix slowdowns with drm-kmod that get worse over time as physical memory become more fragmented (and probably also depending on other factors).
-gitref:831e6fb0baf6[repository=src]
-(Sponsored by The FreeBSD Foundation).
-
 man:grep[1] no longer follows symbolic links by default for recursive searches.
 This matches the documented behavior in the manual page.
 gitref:3a2ec5957ea9[repository=src]
@@ -238,12 +233,6 @@ This uses DES and it is likely that nobody uses that in 2025.
 
 This section covers changes to kernel configurations, system tuning, and system control parameters that are not otherwise categorized.
 
-Teach man:sysctl[8] to attach and run itself in a jail.
-This allows the parent jail to retrieve or set kernel state when child does not have man:sysctl[8] installed (for example light weighted OCI containers or slim jails).
-This is especially useful when manipulating jail prison or vnet sysctls.
-For example, `sysctl -j foo -Ja` or `sysctl -j foo net.fibs=2`.
-gitref:8d5d7e2ba3a6[repository=src].
-
 [[kernel-general]]
 === General Kernel Changes
 
@@ -268,7 +257,24 @@ Additionally, it must be possible for this set of groups to also depend on the t
 gitref:83ffc412b2e9[repository=src].
 (Sponsored by The FreeBSD Foundation).
 
-Allow man:mpi3mr[4] driver to be in-kernel and add to GENERIC (gitref:e2b8fb2202c2[repository=src]).
+Teach man:sysctl[8] to attach and run itself in a jail.
+This allows the parent jail to retrieve or set kernel state when child does not have man:sysctl[8] installed (for example light weighted OCI containers or slim jails).
+This is especially useful when manipulating jail prison or vnet sysctls.
+For example, `sysctl -j foo -Ja` or `sysctl -j foo net.fibs=2`.
+gitref:8d5d7e2ba3a6[repository=src].
+
+man:sound[4]: Allocate vchans on-demand.
+Refactor `pcm_chnalloc()` and merge with parts of `vchan_setnew()` (now removed) and `dsp_open()`’s channel creation into a `new dsp_chn_alloc()` function.
+The function is responsible for either using a free HW channel (if `vchans` are disabled), or allocating a new vchan.
+`hw.snd.vchans_enable` (previously `hw.snd.maxautovchans`) and `dev.pcm.X.{play|rec}.vchans` now work as tunables to only enable/disable `vchans`, as opposed to setting their number and/or (de-)allocating vchans.
+Since these sysctls do not trigger any (de-)allocations anymore, their effect is instantaneous, whereas before it could have frozen the machine (when trying to allocate new vchans) when setting `dev.pcm.X.{play|rec}.vchans` to a very large value.
+gitref:960ee8094913[repository=src].
+(Sponsored by	The FreeBSD Foundation).
+
+LinuxKPI: `linux_alloc_pages()` now honors `__GFP_NORETRY`.
+This is to fix slowdowns with drm-kmod that get worse over time as physical memory become more fragmented (and probably also depending on other factors).
+gitref:831e6fb0baf6[repository=src]
+(Sponsored by The FreeBSD Foundation).
 
 [[drivers]]
 == Devices and Drivers
@@ -285,6 +291,8 @@ This aligns with the latest MPI specification.
 This includes updated structures, field definitions, and constants required for compatibility with updated firmware.
 (gitref:60cf1576501d[repository=src]).
 
+The man:mpi3mr[4] driver is now in GENERIC (gitref:e2b8fb2202c2[repository=src]).
+
 man:rtw88[4]: Merge Realtek's rtw88 driver based on Linux v6.14 (gitref:8ef442451791[repository=src]).
 (Sponsored by The FreeBSD Foundation).
 
@@ -294,16 +302,38 @@ man:rtw89[4]: Merge Realtek's rtw89 driver based on Linux v6.14 (gitref:b6e8b845
 man:iwmbtfw[4]: Add support for 9260/9560 bluetooth adaptors (gitref:8e62ae9693bd[repository=src]).
 Required firmware files are already included in to package:comms/iwmbt-firmware[] port.
 
-Added support for Brainboxes USB-to-Serial adapters.
-(gitref:47db906375b5[repository=src])
+man:ena[4] driver version has been updated to v2.8.1 (gitref:a1685d25601e[repository=src]).
+(Sponsored by Amazon, Inc.)
 
-man:sound[4]: Allocate vchans on-demand.
-Refactor `pcm_chnalloc()` and merge with parts of `vchan_setnew()` (now removed) and `dsp_open()`’s channel creation into a `new dsp_chn_alloc()` function.
-The function is responsible for either using a free HW channel (if `vchans` are disabled), or allocating a new vchan.
-`hw.snd.vchans_enable` (previously `hw.snd.maxautovchans`) and `dev.pcm.X.{play|rec}.vchans` now work as tunables to only enable/disable `vchans`, as opposed to setting their number and/or (de-)allocating vchans.
-Since these sysctls do not trigger any (de-)allocations anymore, their effect is instantaneous, whereas before it could have frozen the machine (when trying to allocate new vchans) when setting `dev.pcm.X.{play|rec}.vchans` to a very large value.
-gitref:960ee8094913[repository=src].
-(Sponsored by	The FreeBSD Foundation).
+man:ix[4]: Add support for 1000BASE-BX SFP modules x550(gitref:24491b4acce5[repository=src]).
+
+man:bnxt[4]: Enable NPAR support on BCM57504 10/25GbE NICs.
+(gitref:54f842ed8897[repository=src]).
+
+man:bnxt[4]: Add 5760X (Thor2) PCI IDs support.
+Add Thor2 PCI IDs.
+(gitref:45e161020c2d[repository=src]).
+
+man:bnxt[4]: Add support for 400G speed modules (gitref:32fdad17f060[repository=src]).
+
+man:ix[4]: Add support for 1000BASE-BX SFP modules.
+Add support for 1Gbit BiDi modules.
+(gitref:c34817d9aef7[repository=src]).
+
+man:igc[4]: Fix attach for I226-K and LMVP devices.
+The device IDs for these were in the driver's list of PCI ids to attach to, but `igc_set_mac_type()` had never been setup to set the correct mac type for these devices.
+Fix this by adding these IDs to the switch block in order for them to be recognized by the driver instead of returning an error.
+This fixes the man:igc[4] attach for the I226-K LOM on the ASRock Z790 PG-ITX/TB4 motherboard, allowing it to be recognized and used.
+gitref:f034ddd2fa38[repository=src].
+
+Remove old itr sysctl handler from man:em[4].
+This implementation had various bugs.  The unit conversion/scaling was wrong, and it also did not handle 82574L or man:igb[4] devices correctly.
+With the new AIM code, it is expected most users will not need to manually tune this.
+gitref:edf50670e215[repository=src]
+(Sponsored by	BBOX.io).
+
+Added support for Brainboxes USB-to-Serial adapters in man:uftdi[4].
+(gitref:47db906375b5[repository=src])
 
 [[drivers-removals]]
 === Deprecated and Removed Drivers
@@ -368,30 +398,6 @@ This section describes changes that affect networking in FreeBSD.
 [[network-general]]
 === General Network
 
-man:ena[4] driver version has been updated to v2.8.1 (gitref:a1685d25601e[repository=src]).
-(Sponsored by Amazon, Inc.)
-
-man:ix[4]: Add support for 1000BASE-BX SFP modules x550(gitref:24491b4acce5[repository=src]).
-
-man:bnxt[4]: Enable NPAR support on BCM57504 10/25GbE NICs.
-(gitref:54f842ed8897[repository=src]).
-
-man:bnxt[4]: Add 5760X (Thor2) PCI IDs support.
-Add Thor2 PCI IDs.
-(gitref:45e161020c2d[repository=src]).
-
-man:bnxt[4]: Add support for 400G speed modules (gitref:32fdad17f060[repository=src]).
-
-man:ix[4]: Add support for 1000BASE-BX SFP modules.
-Add support for 1Gbit BiDi modules.
-(gitref:c34817d9aef7[repository=src]).
-
-man:igc[4]: Fix attach for I226-K and LMVP devices.
-The device IDs for these were in the driver's list of PCI ids to attach to, but `igc_set_mac_type()` had never been setup to set the correct mac type for these devices.
-Fix this by adding these IDs to the switch block in order for them to be recognized by the driver instead of returning an error.
-This fixes the man:igc[4] attach for the I226-K LOM on the ASRock Z790 PG-ITX/TB4 motherboard, allowing it to be recognized and used.
-gitref:f034ddd2fa38[repository=src].
-
 Teach man:ip6addrctl[8] to attach and run itself in a jail.
 This will make it easier to manage address selection policies of vnet jails, especially for those light weighted OCI containers or slim jails.
 gitref:b709f7b38cc4[repository=src]
@@ -400,12 +406,6 @@ Convert `PF_DEFAULT_TO_DROP` into a vnet loader tunable 'net.pf.default_to_drop'
 gitref:7f7ef494f11d[repository=src] introduced a compile time option `PF_DEFAULT_TO_DROP` to make the man:pf[4] default rule to drop.
 While this change exposes a vnet loader tunable 'net.pf.default_to_drop' so that users can change the default rule without re-compiling the man:pf[4] module.
 gitref:3965be101c43[repository=src]
-
-Remove old itr sysctl handler from man:em[4].
-This implementation had various bugs.  The unit conversion/scaling was wrong, and it also did not handle 82574L or man:igb[4] devices correctly.
-With the new AIM code, it is expected most users will not need to manually tune this.
-gitref:edf50670e215[repository=src]
-(Sponsored by	BBOX.io).
 
 [[wireless-networking]]
 === Wireless Networking
@@ -427,8 +427,7 @@ Please see link:https://www.freebsd.org/releases/{localRel}R/hardware[the list o
 [[hardware-virtualization]]
 === Virtualization Support
 
-`hw.pci.intx_reroute` has been turned off in EC2.
-(gitref:66d36f4f1025[repository=src]).
+Several bug fixes and configuration changes collectively allow device hotplug on both x86 and arm64 ("Graviton") EC2 instances.
 
 [[documentation]]
 == Documentation
