--- a/website/content/en/releases/14.3R/relnotes.adoc
+++ b/website/content/en/releases/14.3R/relnotes.adoc
@@ -171,6 +171,11 @@ In a second step, all columns passed via `-O` are finally inserted after the bui
 gitref:1fc8cb547cd4[repository=src].
 (Sponsored by The FreeBSD Foundation).
 
+Remove not-explicitly-requested columns with duplicate data in man:ps[1].
+Before this change, when stacking up more columns in the display through command-line options, if user requested to add some "canned" display (through options `-j`, `-l`, `-u` or `-v`), columns in it that were "duplicates" of already requested ones (meaning that they share the same keyword, regardless of whether their headers have been customized) were in the end omitted.
+gitref:7aa2f4826717[repository=src].
+(Sponsored by The FreeBSD Foundation).
+
 Add flags to filter jail prison and vnet variables in man:sysctl[8] output.
 So users do not have to contact the source code to tell whether a variable is a jail prison / vnet one or not.
 gitref:615c9ce250ee[repository=src].
@@ -236,7 +241,7 @@ This section covers changes to kernel configurations, system tuning, and system 
 [[kernel-general]]
 === General Kernel Changes
 
-Support PCIe hotplug on arm64.
+Support legacy PCI hotplug on arm64.
 gitref:355f02cddbf0[repository=src].
 (Sponsored by Arm Ltd).
 
@@ -262,6 +267,15 @@ This allows the parent jail to retrieve or set kernel state when child does not 
 This is especially useful when manipulating jail prison or vnet sysctls.
 For example, `sysctl -j foo -Ja` or `sysctl -j foo net.fibs=2`.
 gitref:8d5d7e2ba3a6[repository=src].
+
+Enable vnet man:sysctl[9] variables to be loader tunable.
+In gitref:3da1cf1e88f8[repository=src], the meaning of the flag `CTLFLAG_TUN` is extended to automatically check if there is a kernel environment variable which shall initialize the `SYSCTL` during early boot.
+It works for all `SYSCTL` types both statically and dynamically created ones, except for the `SYSCTLs` which belong to VNETs.
+Note that the implementation has a limitation.
+It behaves the same way as that of non-vnet loader tunables.
+That is, after the kernel or modules being initialized, any changes (for example via `kenv`) to kernel environment variable will not affect the corresponding vnet variable of subsequently created VNETs.
+To overcome it, `TUNABLE_XXX_FETCH` can be used to fetch the kernel environment variable into those vnet variables during vnet constructing.
+gitref:894efae09de4[repository=src]
 
 man:sound[4]: Allocate vchans on-demand.
 Refactor `pcm_chnalloc()` and merge with parts of `vchan_setnew()` (now removed) and `dsp_open()`’s channel creation into a `new dsp_chn_alloc()` function.
@@ -428,6 +442,7 @@ Please see link:https://www.freebsd.org/releases/{localRel}R/hardware[the list o
 === Virtualization Support
 
 Several bug fixes and configuration changes collectively allow device hotplug on both x86 and arm64 ("Graviton") EC2 instances.
+Users upgrading EC2 instances from earlier FreeBSD releases should set `hw.pci.intx_reroute=0` and `debug.acpi.quirks="56"` in `/boot/loader.conf`.
 
 [[documentation]]
 == Documentation
@@ -467,20 +482,6 @@ This was originally discussed as part of FreeBSD 15 planning, but did not happen
 Add the deprecation notice now, with an expectation that it will be removed before FreeBSD 16.
 gitref:fc889167c319[repository=src].
 (Sponsored by The FreeBSD Foundation).
-
-Remove not-explicitly-requested columns with duplicate data in man:ps[1].
-Before this change, when stacking up more columns in the display through command-line options, if user requested to add some "canned" display (through options `-j`, `-l`, `-u` or `-v`), columns in it that were "duplicates" of already requested ones (meaning that they share the same keyword, regardless of whether their headers have been customized) were in the end omitted.
-gitref:7aa2f4826717[repository=src].
-(Sponsored by The FreeBSD Foundation).
-
-Enable vnet man:sysctl[9] variables to be loader tunable.
-In gitref:3da1cf1e88f8[repository=src], the meaning of the flag `CTLFLAG_TUN` is extended to automatically check if there is a kernel environment variable which shall initialize the `SYSCTL` during early boot.
-It works for all `SYSCTL` types both statically and dynamically created ones, except for the `SYSCTLs` which belong to VNETs.
-Note that the implementation has a limitation.
-It behaves the same way as that of non-vnet loader tunables.
-That is, after the kernel or modules being initialized, any changes (for example via `kenv`) to kernel environment variable will not affect the corresponding vnet variable of subsequently created VNETs.
-To overcome it, `TUNABLE_XXX_FETCH` can be used to fetch the kernel environment variable into those vnet variables during vnet constructing.
-gitref:894efae09de4[repository=src]
 
 [[ports]]
 == Ports Collection and Package Infrastructure
