--- a/website/content/en/releases/14.3R/relnotes.adoc
+++ b/website/content/en/releases/14.3R/relnotes.adoc
@@ -488,11 +488,9 @@ gitref:fc889167c319[repository=src].
 
 This section covers changes to the FreeBSD Ports Collection, package infrastructure, and package maintenance and installation tools.
 
-New kmod repository was added.
-The kmod repository is a new repository for FreeBSD kernel modules specially third party modules from the FreeBSD Ports Collection.
-The installer images uses Quarterly branch of the ports tree but the quarterly branch lags behind on the most recent Graphics drivers.
-To serve the most recent graphics drivers and related kmods the kmod repository was created.
-(gitref:a47542f71511[repository=src]).
+A new `FreeBSD-kmods` repository is included in the default `/etc/pkg/FreeBSD.conf` man:pkg[8] configuration file.
+This repository contains kernel modules compiled specifically for {releaseCurrent} rather than for the {releaseBranch} branch.
+Installing kernel modules from this repository allows drivers with unstable kernel interfaces, in particular graphics drivers, to work even when the main {releaseBranch} repository has packages build on a previous release. (gitref:a47542f71511[repository=src]).
 
 [[ports-packages]]
 === Packaging Changes
