--- a/website/content/en/releases/14.3R/relnotes.adoc
+++ b/website/content/en/releases/14.3R/relnotes.adoc
@@ -483,6 +483,20 @@ Add the deprecation notice now, with an expectation that it will be removed befo
 gitref:fc889167c319[repository=src].
 (Sponsored by The FreeBSD Foundation).
 
+The ethernet switch controllers, man:mtkswitch[4], man:ip17x[4], man:ar40xx[4], and man:e6000sw[4] have gained initial manual pages.
+
+man:mount[8] has gained an example for remounting all filesystems read/write in single-user mode.
+
+Manual pages for the lua man:loader[8] modules have had their desctiptions reworded to optimize man:apropos[1] results.
+
+The manual pages style guide, man:style.mdoc[5], has gained a section for listing supported hardware.
+When listed this way, the supported hardware will be listed in link:https://www.freebsd.org/releases/{localRel}R/hardware[the supported hardware notes].
+Many manuals have had this section added or reworded in this release.
+
+Much work has gone into adding man:sysctl[8]s and environment variables to the manual.
+Try searching for them with `apropos Va=here.is.the.sysctl` or `apropos Ev=here_is_the_environment_variable`.
+
+The man:intro[5] to the File Formats manual has been revised, incorporating improvements from OpenBSD.
 [[ports]]
 == Ports Collection and Package Infrastructure
 
