--- a/website/content/en/releases/14.3R/errata.adoc
+++ b/website/content/en/releases/14.3R/errata.adoc
@@ -63,7 +63,15 @@ For a list of all FreeBSD CERT security advisories, see https://www.FreeBSD.org/
 [[open-issues]]
 == Open Issues
 
-No open issues.
+* When "restarting" the FreeBSD installation process, some values are remembered and not re-prompted.
+
+* The installer produces a non-booting system in the (non-default) combination of MBR and ZFS.
+
+* SCTP can use deprecated addresses even when `net.inet6.ip6.use_deprecated` is set to zero (non-default).
+
+* Unloading the `snd_dummy` kernel module can cause a kernel panic.
+
+* Some wifi drivers fail to connect to networks using the (long-deprecated) TKIP protocol.
 
 [[late-news]]
 == Late-Breaking News
