administration: Add srcmgr-secretary
Sponsored by:	The FreeBSD Foundation

--- a/website/content/en/administration.adoc
+++ b/website/content/en/administration.adoc
@@ -203,6 +203,11 @@ The Ports Management Team Secretary is also responsible for writing and sending 
 
 * {tcberner}
 
+[[t-srctmgr-secretary]]
+== Srouce Management Team Secretary <srcmgr-secretary@FreeBSD.org>
+
+There is currently no Source Management Team Secretary appointed; emails are being forwarded to the Source Management Team.
+
 '''
 
 [[t-accounts]]
