[phb]: Document Uses gnome:gnomedesktop4
Following
https://cgit.freebsd.org/ports/commit/?id=a187ae5b19ff8ea62c5740183154ab242e855769

--- a/documentation/content/en/books/porters-handbook/uses/_index.adoc
+++ b/documentation/content/en/books/porters-handbook/uses/_index.adoc
@@ -962,6 +962,7 @@ The available components are:
 * `glibmm`
 * `gnomecontrolcenter3`
 * `gnomedesktop3`
+* `gnomedesktop4`
 * `gnomedocutils`
 * `gnomemenus3`
 * `gnomemimedata`
