--- a/website/content/en/administration.adoc
+++ b/website/content/en/administration.adoc
@@ -135,15 +135,13 @@ The https://www.freebsd.org/srcmgr/charter/[srcmgr team charter] describes the d
 The Primary Release Engineering Team is responsible for setting and publishing release schedules for official project releases of FreeBSD, announcing code freezes and maintaining `releng/*` branches, among other things.
 The https://www.freebsd.org/releng/charter/[release engineering team charter] describes the duties and responsibilities of the Primary Release Engineering Team in greater detail.
 
-* {kib}
 * {dch}
 * {blackend}
-* {jhixson}
+* {jfree}
 * {delphij}
 * {emaste} (Deputy Lead)
 * {mmokhi}
 * {cperciva} (Lead)
-* {dfr}
 * {bofh}
 
 [[t-donations]]
