--- a/website/content/en/administration.adoc
+++ b/website/content/en/administration.adoc
@@ -202,7 +202,7 @@ The Ports Management Team Secretary is also responsible for writing and sending 
 * {tcberner}
 
 [[t-srctmgr-secretary]]
-== Srouce Management Team Secretary <srcmgr-secretary@FreeBSD.org>
+== Source Management Team Secretary <srcmgr-secretary@FreeBSD.org>
 
 There is currently no Source Management Team Secretary appointed; emails are being forwarded to the Source Management Team.
 
