new committer (src): Ahmad Khalifa (vexeduxr)
Complete steps 1-4 for new committers from the committer's guide:

1. Add myself to doc/shared/authors.adoc
2. Add myself to doc/shared/contrib-committers.adoc
3. Add a news entry
4. Add my PGP key

Approved by: imp (mentor)
Differential Revision: https://reviews.freebsd.org/D50821

--- a/documentation/content/en/articles/pgpkeys/_index.adoc
+++ b/documentation/content/en/articles/pgpkeys/_index.adoc
@@ -1515,6 +1515,9 @@ include::{include-path}ivy.key[]
 === `{khorben}`
 include::{include-path}khorben.key[]
 
+=== `{vexeduxr}`
+include::{include-path}vexeduxr.key[]
+
 [[pgpkeys-other]]
 == Other Cluster Account Holders
 
