--- a/shared/authors.adoc
+++ b/shared/authors.adoc
@@ -3539,6 +3539,10 @@
 :versus-email: versus@FreeBSD.org
 :versus: {versus-name} <{versus-email}>
 
+:vexeduxr-name: Ahmad Khalifa
+:vexeduxr-email: vexeduxr@FreeBSD.org
+:vexeduxr: {vexeduxr-name} <{vexeduxr-email}>
+
 :vg-name: Veniamin Gvozdikov
 :vg-email: vg@FreeBSD.org
 :vg: {vg-name} <{vg-email}>
