--- a/documentation/content/en/books/handbook/desktop/_index.adoc
+++ b/documentation/content/en/books/handbook/desktop/_index.adoc
@@ -155,8 +155,8 @@ To increase messages size execute:
 
 [source,shell]
 ....
-sysctl net.local.stream.recvspace=65536
-sysctl net.local.stream.sendspace=65536
+# sysctl net.local.stream.recvspace=65536
+# sysctl net.local.stream.sendspace=65536
 ....
 
 [[kde-start]]
