--- a/website/content/en/releases/15.0R/relnotes.adoc
+++ b/website/content/en/releases/15.0R/relnotes.adoc
@@ -173,6 +173,11 @@ This section describes changes that affect networking in FreeBSD.
 [[network-general]]
 === General Network
 
+[[wireless-networking]]
+=== Wireless Networking
+
+The LinuxKPI 802.11 comapt layer man:linuxkpi_wlan[4] gained support for the Galois/Counter Mode Protocol (GCMP) from man:wlan_gcmp[4]. (Sponsored by The FreeBSD Foundation)
+
 [[hardware]]
 == Hardware Support
 
