--- a/website/content/en/releases/13.1R/_index.adoc
+++ b/website/content/en/releases/13.1R/_index.adoc
@@ -11,12 +11,14 @@ sidenav: download
 
 == Introduction
 
-This is the index page for FreeBSD {localRel}. For more information about the release engineering process, please see the link:../../releng/[Release Engineering] section of the web site.
+This is the index page for FreeBSD {localRel}.
+For more information about the release engineering process, please see the link:../../releng/[Release Engineering] section of the web site.
 
 == Detailed Information
 
-More detailed information, such as release notes and hardware notes can be found at these pages:
+More detailed information, such as release notes and hardware notes, can be found at these pages:
 
+link:announce/[FreeBSD {localRel}-RELEASE announcement] +
 link:signatures/[FreeBSD {localRel}-RELEASE signed checksum files] +
 link:installation/[FreeBSD {localRel}-RELEASE installation information] +
 link:hardware/[FreeBSD {localRel}-RELEASE hardware information] +
@@ -24,6 +26,4 @@ link:relnotes/[FreeBSD {localRel}-RELEASE release notes] +
 link:errata/[FreeBSD {localRel}-RELEASE errata] +
 link:readme/[FreeBSD {localRel}-RELEASE readme] +
 link:schedule/[FreeBSD {localRel}-RELEASE schedule] +
-////
-link:todo/[FreeBSD Release Engineering TODO Page] +
-////
+//link:todo/[FreeBSD Release Engineering TODO Page]
