--- a/website/content/en/releases/13.5R/_index.adoc
+++ b/website/content/en/releases/13.5R/_index.adoc
@@ -16,13 +16,14 @@ For more information about the release engineering process, please see the link:
 
 == Detailed Information
 
-More detailed information, such as release notes and hardware notes can be found at these pages:
+More detailed information, such as release notes and hardware notes, can be found at these pages:
 
-link:signatures[FreeBSD {localRel}-RELEASE signed checksum files] +
-link:installation[FreeBSD {localRel}-RELEASE installation information] +
-link:hardware[FreeBSD {localRel}-RELEASE hardware information] +
-link:relnotes[FreeBSD {localRel}-RELEASE release notes] +
-link:errata[FreeBSD {localRel}-RELEASE errata] +
-link:readme[FreeBSD {localRel}-RELEASE readme] +
-link:schedule[FreeBSD {localRel}-RELEASE schedule] +
-//link:todo[FreeBSD Release Engineering TODO Page]
+link:announce/[FreeBSD {localRel}-RELEASE announcement] +
+link:signatures/[FreeBSD {localRel}-RELEASE signed checksum files] +
+link:installation/[FreeBSD {localRel}-RELEASE installation information] +
+link:hardware/[FreeBSD {localRel}-RELEASE hardware information] +
+link:relnotes/[FreeBSD {localRel}-RELEASE release notes] +
+link:errata/[FreeBSD {localRel}-RELEASE errata] +
+link:readme/[FreeBSD {localRel}-RELEASE readme] +
+link:schedule/[FreeBSD {localRel}-RELEASE schedule] +
+//link:todo/[FreeBSD Release Engineering TODO Page]
