New committer (ports): Älven (alven)
My first steps as a new committer, following the Committer's Guide: [0]

1. Add an Author Entity (doc/shared/authors.adoc)
2. Update the List of Developers and Contributors (doc/shared/contrib-committers.adoc)
3. Add a News Item (doc/website/data/en/news/news.toml)
4. Add a PGP Key (doc/documentation/static/pgpkeys/alven.key)

[0] https://docs.freebsd.org/en/articles/committers-guide/#conventions-committers

PR:		287620
Approved by:	db@ (Mentor)

--- a/documentation/content/en/articles/pgpkeys/_index.adoc
+++ b/documentation/content/en/articles/pgpkeys/_index.adoc
@@ -1521,6 +1521,9 @@ include::{include-path}khorben.key[]
 === `{vexeduxr}`
 include::{include-path}vexeduxr.key[]
 
+=== `{alven}`
+include::{include-path}alven.key[]
+
 [[pgpkeys-other]]
 == Other Cluster Account Holders
 
