--- a/shared/authors.adoc
+++ b/shared/authors.adoc
@@ -143,6 +143,10 @@
 :alonso-email: alonso@FreeBSD.org
 :alonso: {alonso-name} <{alonso-email}>
 
+:alven-name: Älven
+:alven-email: alven@FreeBSD.org
+:alven: {alven-name} <{alven-email}>
+
 :am-name: Atul Mukker
 :am-email: am@FreeBSD.org
 :am: {am-name} <{am-email}>
