--- a/shared/authors.adoc
+++ b/shared/authors.adoc
@@ -3773,7 +3773,7 @@
 :core-secretary-email: core-secretary@FreeBSD.org
 
 // FreeBSD Doc Engineering Team
-:doceng-members: {blackend}, {dbaio}, {fernape}, {hrs}
+:doceng-members: {blackend}, {fernape}, {hrs}
 :doceng-secretary-email: <doceng-secretary@FreeBSD.org>
 
 // FreeBSD Donations Liaison
