Add myself (ebrandi) as a lurker member to the doceng team

--- a/shared/authors.adoc
+++ b/shared/authors.adoc
@@ -3773,7 +3773,7 @@
 :core-secretary-email: core-secretary@FreeBSD.org
 
 // FreeBSD Doc Engineering Team
-:doceng-members: {blackend}, {fernape}, {hrs}
+:doceng-members: {blackend}, {fernape}, {hrs}, {ebrandi} (lurker)
 :doceng-secretary-email: <doceng-secretary@FreeBSD.org>
 
 // FreeBSD Donations Liaison
