--- a/website/content/en/administration.adoc
+++ b/website/content/en/administration.adoc
@@ -77,6 +77,7 @@ The https://www.freebsd.org/internal/doceng/[doceng team charter] describes the 
 * {blackend}
 * {fernape} (Secretary)
 * {hrs}
+* {ebrandi} (lurker)
 
 [[t-portmgr]]
 == FreeBSD Ports Management Team <portmgr@FreeBSD.org>
