--- a/website/archetypes/release/_index.adoc
+++ b/website/archetypes/release/_index.adoc
@@ -21,11 +21,11 @@ More detailed information
 // and hardware notes
 can be found at these pages:
 
-//link:signatures[FreeBSD {localRel}-RELEASE signed checksum files] +
-//link:installation[FreeBSD {localRel}-RELEASE installation information] +
-//link:hardware[FreeBSD {localRel}-RELEASE hardware information] +
-//link:relnotes[FreeBSD {localRel}-RELEASE release notes] +
-//link:errata[FreeBSD {localRel}-RELEASE errata] +
-//link:readme[FreeBSD {localRel}-RELEASE readme] +
-link:schedule[FreeBSD {localRel}-RELEASE schedule] +
-//link:todo[FreeBSD Release Engineering TODO Page]
+//link:signatures/[FreeBSD {localRel}-RELEASE signed checksum files] +
+//link:installation/[FreeBSD {localRel}-RELEASE installation information] +
+//link:hardware/[FreeBSD {localRel}-RELEASE hardware information] +
+//link:relnotes/[FreeBSD {localRel}-RELEASE release notes] +
+//link:errata/[FreeBSD {localRel}-RELEASE errata] +
+//link:readme/[FreeBSD {localRel}-RELEASE readme] +
+link:schedule/[FreeBSD {localRel}-RELEASE schedule] +
+//link:todo/[FreeBSD Release Engineering TODO Page]
