--- a/website/content/en/releases/11.0R/_index.adoc
+++ b/website/content/en/releases/11.0R/_index.adoc
@@ -11,7 +11,8 @@ sidenav: download
 
 == Introduction
 
-This is the index page for FreeBSD {localRel}. For more information about the release engineering process, please see the link:../../releng/[Release Engineering] section of the web site.
+This is the index page for FreeBSD {localRel}.
+For more information about the release engineering process, please see the link:../../releng/[Release Engineering] section of the web site.
 
 == Detailed Information
 
