--- a/website/content/en/releases/13.5R/_index.adoc
+++ b/website/content/en/releases/13.5R/_index.adoc
@@ -18,6 +18,7 @@ For more information about the release engineering process, please see the link:
 
 More detailed information, such as release notes and hardware notes can be found at these pages:
 
+link:announce/[FreeBSD {localRel}-RELEASE announcement] +
 link:signatures/[FreeBSD {localRel}-RELEASE signed checksum files] +
 link:installation/[FreeBSD {localRel}-RELEASE installation information] +
 link:hardware/[FreeBSD {localRel}-RELEASE hardware information] +
