--- a/website/content/en/releases/15.0R/_index.adoc
+++ b/website/content/en/releases/15.0R/_index.adoc
@@ -21,6 +21,7 @@ More detailed information
 // and hardware notes
 can be found at these pages:
 
+//link:announce/[FreeBSD {localRel}-RELEASE announcement] +
 //link:signatures/[FreeBSD {localRel}-RELEASE signed checksum files] +
 //link:installation/[FreeBSD {localRel}-RELEASE installation information] +
 //link:hardware/[FreeBSD {localRel}-RELEASE hardware information] +
