--- a/website/archetypes/release/_index.adoc
+++ b/website/archetypes/release/_index.adoc
@@ -28,5 +28,4 @@ can be found at these pages:
 //link:relnotes/[FreeBSD {localRel}-RELEASE release notes] +
 //link:errata/[FreeBSD {localRel}-RELEASE errata] +
 //link:readme/[FreeBSD {localRel}-RELEASE readme] +
-link:schedule/[FreeBSD {localRel}-RELEASE schedule] +
-//link:todo/[FreeBSD Release Engineering TODO Page]
+link:schedule/[FreeBSD {localRel}-RELEASE schedule]
