--- a/website/content/en/releases/12.0R/_index.adoc
+++ b/website/content/en/releases/12.0R/_index.adoc
@@ -25,7 +25,4 @@ link:hardware/[FreeBSD {localRel}-RELEASE hardware information] +
 link:relnotes/[FreeBSD {localRel}-RELEASE release notes] +
 link:errata/[FreeBSD {localRel}-RELEASE errata] +
 link:readme/[FreeBSD {localRel}-RELEASE readme] +
-link:schedule/[FreeBSD {localRel}-RELEASE schedule] +
-////
-link:todo/[FreeBSD Release Engineering TODO Page] +
-////
+link:schedule/[FreeBSD {localRel}-RELEASE schedule]
