--- a/website/content/en/releases/13.5R/_index.adoc
+++ b/website/content/en/releases/13.5R/_index.adoc
@@ -16,7 +16,7 @@ For more information about the release engineering process, please see the link:
 
 == Detailed Information
 
-More detailed information, such as release notes and hardware notes can be found at these pages:
+More detailed information, such as release notes and hardware notes, can be found at these pages:
 
 link:announce/[FreeBSD {localRel}-RELEASE announcement] +
 link:signatures/[FreeBSD {localRel}-RELEASE signed checksum files] +
