--- a/website/content/en/releases/15.0R/_index.adoc
+++ b/website/content/en/releases/15.0R/_index.adoc
@@ -18,7 +18,7 @@ For more information about the release engineering process, please see the link:
 
 More detailed information
 //, such as release notes
-// and hardware notes
+// and hardware notes,
 can be found at these pages:
 
 //link:announce/[FreeBSD {localRel}-RELEASE announcement] +
