--- a/website/content/en/status/report-2025-04-2025-06/ports-security.adoc
+++ b/website/content/en/status/report-2025-04-2025-06/ports-security.adoc
@@ -21,4 +21,4 @@ Zero call-used registers at function return to increase program security by eith
 This depends upon support from the compiler for a given architecture.
 This is disabled for python ports; currently there are issues.
 
-The blog post referenced in the links section explains how to use them, how to exclude certain ports if needed, and provides a more detailed explaination of those 3 new features along the already existing build-time security options of the Ports Collection and the basesystem build.
+The blog post referenced in the links section explains how to use them, how to exclude certain ports if needed, and provides a more detailed explanation of those 3 new features along the already existing build-time security options of the Ports Collection and the basesystem build.
