documentation/nl: refresh translation of the "leap seconds" article.
Obtained from:	Dutch Weblate instance

--- a/documentation/content/nl/articles/leap-seconds/_index.adoc
+++ b/documentation/content/nl/articles/leap-seconds/_index.adoc
@@ -1,5 +1,7 @@
 ---
-title: Ondersteuning voor schrikkelseconden in FreeBSD
+description: 'Een korte beschrijving over hoe FreeBSD met schrikkelseconden omgaat'
+tags: ["Leap Seconds", "Support", "Verification", "FreeBSD"]
+title: 'Ondersteuning voor schrikkelseconden in FreeBSD'
 ---
 
 = Ondersteuning voor schrikkelseconden in FreeBSD
@@ -40,33 +42,33 @@ toc::[]
 [[leapseconds-definition]]
 == Introductie
 
-Een _schrikkelseconde_ is een ad-hoc correctie van één seconde om de atomaire tijd te synchroniseren met de omwenteling van de aarde. Dit artikel beschrijft hoe FreeBSD omgaat met schrikkelseconden.
+Een _schrikkelseconde_ is een aanpassing aan UTC van één seconde op specifieke tijden in het jaar om atomaire tijdschalen met variaties in de aardrotatie te synchroniseren. Dit artikel beschrijft hoe FreeBSD omgaat met schrikkelseconden.
 
-Op het moment van schrijven zal de volgende schrikkelseconde plaatsvinden op 2015-juni-30 23:59:60 UTC. Deze schrikkelseconde zal plaatsvinden op een werkdag voor Noord- en Zuid-Amerika en het Aziatische/Pacifische gebied.
+Op het moment van schrijven zal de volgende schrikkelseconde plaatsvinden op 30 juni 2015 om 23:59:60 UTC. Deze schrikkelseconde zal plaatsvinden op een werkdag voor Noord- en Zuid-Amerika en het Aziatische/Pacifische gebied.
 
-Schrikkelseconden worden aangekondigd door http://datacenter.iers.org/[IERS] op http://datacenter.iers.org/web/guest/bulletins/-/somos/5Rgv/product/16[Bulletin C].
+Schrikkelseconden worden aangekondigd door https://www.iers.org/IERS/EN/Home/home_node.html[IERS] op https://datacenter.iers.org/data/latestVersion/16_BULLETIN_C16.txt[Bulletin C].
 
-Het standaardgedrag van schrikkelseconden is beschreven in https://tools.ietf.org/html/rfc7164#section-3[RFC 7164]. Zie ook man:time2posix[3].
+Standaardgedrag voor schrikkelseconden is beschreven in https://datatracker.ietf.org/doc/html/rfc7164#section-3[RFC 7164]. Zie ook man:time2posix[3].
 
 [[leapseconds-posix]]
 == De standaardomgang met schrikkelseconden op FreeBSD
 
-De eenvoudigste manier om met schrikkelseconden om te gaan is met de tijdregels van POSIX die FreeBSD standaard gebruikt, gecombineerd met extref:{handbook}network-servers[NTP, network-ntp]. Wanneer man:ntpd[8] draait en de tijd gesynchroniseerd is met de bovenliggende NTP-servers die schrikkelseconden correct afhandelen, zal de schrikkelseconde ervoor zorgen dat de systeemtijd automatisch de laatste seconde van de dag herhaalt. Er zijn geen andere aanpassingen nodig.
+De eenvoudigste manier om met schrikkelseconden om te gaan is met de tijdregels van POSIX die FreeBSD standaard gebruikt, gecombineerd met extref:{handbook}[NTP, network-ntp]. Wanneer man:ntpd[8] draait en de tijd is gesynchroniseerd met bovenliggende NTP-servers welke correct met schrikkelseconden omgaan, dan zal de schrikkelseconde ervoor zorgen dat het systeem automatisch de laatste seconde van de dag herhaalt. Er zijn geen verdere aanpassingen nodig.
 
-Als de bovenliggende NTP-servers schrikkelseconden niet correct afhandelen, zal man:ntpd[8] de tijd met één seconde laten verspringen nadat de foutieve bovenliggende server dit opgemerkt heeft en zelf is versprongen.
+Als de bovenliggende NTP-servers onjuist met schrikkelseconden omgaan, zal man:ntpd[8] de tijd met één seconde vooruitzetten nadat de afdwalende bovenliggende server het heeft opgemerkt en zichzelf heeft aangepast.
 
-Als NTP niet wordt gebruikt, is het nodig om de systeemklok handmatig aan te passen nadat de schrikkelseconde is verstreken.
+Wanneer NTP niet wordt gebruikt zijn handmatige aanpassingen van de systeemklok nodig nadat de schrikkelseconde heeft plaatsgevonden.
 
 [[leapseconds-cautions]]
 == Waarschuwingen
 
-Schrikkelseconden worden wereldwijd op hetzelfde moment ingevoegd: middernacht UTC. In Japan is dit in het midden van de ochtend, in het Pacifisch gebied in het midden van de dag, in Amerika in de namiddag en in Europa in de nacht.
+Schrikkelseconden worden wereldwijd op hetzelfde moment ingevoegd: middernacht UTC. In Japan is dat het midden van de ochtend, in het Pacifisch gebied in de middag, in Amerika in de late middag en in Europa in de nacht.
 
-We geloven en verwachten dat FreeBSD, mits voorzien van een correcte en stabiele NTP-dienst, zal werken als ontworpen tijdens deze schrikkelseconde, zoals het tijdens de voorgaande deed.
+We verwachten dat FreeBSD, mits voorzien van een correcte en stabiele NTP-dienst, zal werken zoals verwacht tijdens deze schrikkelseconde, net zoals het bij de vorige deed.
 
 We waarschuwen echter dat praktisch geen enkele toepassing de kernel ooit om schrikkelseconden heeft gevraagd. Onze verwachting is dat, zoals ontworpen, schrikkelseconden in feite een herhaling zijn van de seconde voor de schrikkelseconde, wat een verassing is voor de meeste toepassingsprogrammeurs.
 
-Andere besturingssystemen en computers kunnen de schrikkelseconde op een andere manier dan FreeBSD afhandelen, en systemen zonder correcte en stabiele NTP-dienst zullen in het geheel niks van schrikkelseconden weten.
+Andere besturingssystemen en andere computers kunnen anders met de schrikkelseconde omgaan dan FreeBSD, en systemen zonder een correcte en stabiele NTP-dienst zullen helemaal niks van schrikkelseconden afweten.
 
 Het komt voor dat computers crashen vanwege schrikkelseconden, en ervaring laat zien dat een groot gedeelte van alle publieke NTP-servers de schrikkelseconde onjuist kunnen aankondigen en afhandelen.
 
@@ -75,16 +77,16 @@ Probeer er alstublieft voor te zorgen dat er niks ergs gebeurt vanwege de schrik
 [[leapseconds-testing]]
 == Testen
 
-Het is mogelijk om te kijken of een schrikkelseconde zal worden gebruikt. Vanwege de aard van NTP kan de test tot 24 uur voor de schrikkelseconde werken. Sommige grote bronnen van referentieklokken kondigen schrikkelseconden slechts één uur van te voren aan. Ondervraag de daemon NTP:
+Het is mogelijk om te kijken of een schrikkelseconde zal worden gebruikt. Vanwege de aard van NTP kan de test tot 24 uur voor de schrikkelseconde werken. Sommige grote bronnen van referentieklokken kondigen schrikkelseconden slechts één uur van te voren aan. Ondervraag het NTP-daemon:
 
-[source,shell]
+[source, shell]
 ....
 % ntpq -c 'rv 0 leap'
 ....
 
-Uitvoer die `leap_add_sec` bevat wijst op correcte ondersteuning van de schrikkelseconde. Voorafgaand aan de 24 uur die tot de schrikkelseconde leiden, of nadat de schrikkelseconde is verstreken, zal `leap_none` zichtbaar zijn.
+Uitvoer welke `leap_add_sec` bevat wijst op correcte ondersteuning van de schrikkelseconde. Voorafgaand aan de 24 uur die tot de schrikkelseconde leiden, of nadat de schrikkelseconde is verstreken, zal `leap_none` zichtbaar zijn.
 
 [[leapseconds-conclusion]]
 == Conclusie
 
-In de praktijk zijn schrikkelseconden meestal geen probleem op FreeBSD. We hopen dat dit overzicht helpt met wat te verwachten en hoe schrikkelseconden gladder te laten verlopen.
+In de praktijk zijn schrikkelseconden meestal geen probleem op FreeBSD. We hopen dat dit overzicht helpt met wat te verwachten en hoe schrikkelseconden soepeler te laten verlopen.
