handbook/network: Clarify use of Amnesiac
When FreeBSD calls itself Amnesiac, that is not actually the hostname.
It does that when there is no hostname set. It is not a substitute for
assigning a hostname. Setting a hostname or complaining when none is set
would introduce a regression for cases where the hostname is assigned by
the DHCP server. Attempt to clarify the handbook instead of changing the
behavior.

PR:		286847
Reported by:	jrtc27
Discussed with:	linimon

--- a/documentation/content/en/books/handbook/network/_index.adoc
+++ b/documentation/content/en/books/handbook/network/_index.adoc
@@ -774,7 +774,7 @@ The hostname represents the fully qualified domain name (FQDN) of the host on th
 
 [TIP]
 ====
-If no hostname has been set for the host FreeBSD will assign the value `Amnesiac`.
+If no hostname is set for the host, FreeBSD will call itself `Amnesiac`.
 ====
 
 [[get-hostname]]
