Fix hu PDF handbook generation

--- a/documentation/content/hu/books/handbook/install/_index.adoc
+++ b/documentation/content/hu/books/handbook/install/_index.adoc
@@ -906,7 +906,7 @@ Bizonyos alkalmazások kedvelnek egyes partíciókiosztási sémákat, különö
 Ebben a sémában négy partíció szerepel - egy a lapozóállománynak és három az állományrendszereknek.
 
 .Az elsõ lemez partícióinak kiosztása
-[cols="1,1,1,1", frame="none", options="header"]
+[cols="10%,10%,10%,70%", frame="none", options="header"]
 |===
 | Partíció
 | Állományrendszer
@@ -947,7 +947,7 @@ Az imént megadott értékeket csak példaként adtuk meg és csak a tapasztalt 
 Ha a FreeBSD-t egynél több lemezre telepítjük, akkor a korábban megadott többi slice-ban is létre kell hoznunk partíciókat. Ezt legegyszerûbben úgy tehetjük meg, ha minden lemezen létrehozunk két partíciót: egyet a lapozóállománynak, egyet pedig az állományrendszernek.
 
 .Több lemez partícióinak kiosztása
-[cols="1,1,1,1", frame="none", options="header"]
+[cols="10%,10%,10%,70%", frame="none", options="header"]
 |===
 | Partíció
 | Állományrendszer
