handbook/porters-handbook: add new ports category 'filesystems'
PR:		282965
Reported by:	Herbert J. Skuhra

--- a/documentation/content/en/books/porters-handbook/makefiles/_index.adoc
+++ b/documentation/content/en/books/porters-handbook/makefiles/_index.adoc
@@ -735,6 +735,10 @@ For non-virtual categories, there is a one-line description in `COMMENT` in that
 |Ports related to the Enlightenment window manager.
 |
 
+|[.filename]#filesystems#
+|File systems and related utilities.
+|
+
 |[.filename]#finance#
 |Monetary, financial and related applications.
 |
